# mcp-excel-online

./: .env.example  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-ci.yml  release.yml
app/: server.py
src/mcp_excel_online/: __init__.py  __main__.py  server.py
src/mcp_excel_online/core/: args.py  config.py
src/mcp_excel_online/core/graph_sdk/: client_manager.py  service_client.py
src/mcp_excel_online/core/mcp/: config.py  server.py
src/mcp_excel_online/core/models/: chart.py  graph_api.py  mcp.py  tools.py
src/mcp_excel_online/resources/: drive.py
src/mcp_excel_online/tools/: __init__.py  chart.py  helper.py  workbook.py  worksheet.py
